2002-12-05  Miklos Szeredi <mszeredi@inf.bme.hu>

	* 64 bit file offset fixes in the fuse kernel module

	* Added function 'fuse_exit()' which can be used to exit the main
	loop

2002-12-03  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Added _FILE_OFFSET_BITS=64 define to fuse.h.  Note, that this is
	an incompatible interface change.

2002-10-28  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Portablility fix (bug reported by C. Chris Erway)

2002-10-25  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Use Mark Glines' fd passing method for default operation instead
	of old reexec

2002-10-22  Miklos Szeredi <mszeredi@inf.bme.hu>

	* fix "Stale NFS file handle" bug caused by changes in 2.4.19

2002-10-22  Miklos Szeredi <mszeredi@inf.bme.hu>

	* fix incompatiblity with Red Hat kernels, with help from Nathan
	Thompson-Amato.

2002-04-18  Mark Glines <mark@glines.org>

	* added an alternative to fuse_mount(), called
      fuse_mount_ioslave(), which does not need to reexec the
      FUSE program.
	* added a small helper util needed by fuse_mount_ioslave().

2002-03-16  Mark Glines <mark@glines.org>

	* use struct fuse_statfs everywhere possible to avoid problems
      with the headerfiles changing struct statfs member sizes

2002-03-01  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Another RPM spec file for RedHat >= 7 by Ian Pilcher

2002-01-14  Miklos Szeredi <mszeredi@inf.bme.hu>

	* RPM support by Achim Settelmeier

2002-01-09  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Version 0.95 released
	
2002-01-09  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Revaidate all path components not just the last, this means a
	very small performance penalty for being more up-to-date.

2002-01-08  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Update and fix python interface

2002-01-07  Mark Glines <mark@glines.org>
	
	* Added statfs() support to kernel, lib, examples, and perl!

2001-12-26  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Better cross compilation support

	* Ported to Compaq IPAQ
