@@ -1,3 +1,7 @@
+2002-12-10  Miklos Szeredi <mszeredi@inf.bme.hu>
+
+	* The release() VFS call is now exported to the FUSE interface
+
 2002-12-05  Miklos Szeredi <mszeredi@inf.bme.hu>
 
 	* 64 bit file offset fixes in the fuse kernel module
